# gopobot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: ai.py  bot.py  history.py  images.py  settings.py
