[project]
name = "gopobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=1.108.1",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.4",
    "redis>=6.4.0",
]
